Deploy staging play-codecheck